Cell links on sidebar

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(cellUI)
 export(notebookServer)
 export(notebookUI)
 export(runNotebook)
+exportClasses(SessionCells)
 exportClasses(SessionVariables)
 import(shiny)
 import(shinydashboard)
