Update cell bookmark

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,8 @@ export(cellUI)
 export(notebookServer)
 export(notebookUI)
 export(runNotebook)
-exportClasses(SessionCells)
+exportClasses(CellSession)
 exportClasses(SessionVariables)
+import(plotly)
 import(shiny)
 import(shinydashboard)
